# Parallelisme

./: .gitignore  CMakeCache.txt  Makefile  README.md  cmake_install.cmake
exercice1/: CMakeLists.txt
exercice1/src/: testCount.cpp  testMain.cpp
exercice1/src/include/: Count.hpp  Found_N_Length_Subset.hpp  Longuest_Subset.hpp
exercice2/: CMakeLists.txt
exercice2/src/: testMain.cpp
exercice2/src/include/: ParallelRecursiveMerge.hpp
exercice3/src/: testMain.cpp
exercice3/src/include/: ParallelRecursiveMerge.hpp
exercice4/: CMakeLists.txt
exercice4/src/: pearson.cpp
exercice5/: CMakeLists.txt
exercice5/src/: testMain.cpp
exercice5/src/include/: ParallelStableMerge.hpp
